--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MongleAndroid_RELEASE</string>
+    <string name="app_name">mongle</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_detail_theme">DetailThemeActivity</string>
     <!--
